testdata/baselines/reference/submodule/compiler/typeArgumentInferenceApparentType2.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
typeArgumentInferenceApparentType2.ts(1,30): error TS2304: Cannot find name 'Iterable'.
typeArgumentInferenceApparentType2.ts(2,30): error TS2304: Cannot find name 'Iterable'.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== typeArgumentInferenceApparentType2.ts (2 errors) ====
    function method<T>(iterable: Iterable<T>): T {
                                 ~~~~~~~~
!!! error TS2304: Cannot find name 'Iterable'.
        function inner<U extends Iterable<T>>() {
                                 ~~~~~~~~
!!! error TS2304: Cannot find name 'Iterable'.
            var u: U;
            var res: T = method(u);
        }
        return;
    }